CompInfoSystem/main/default/objects/Inventory_Change_Request__c/Inventory_Change_Request__c.object-meta.xml
<CustomObject>
    <label>Inventory Change Request</label>
    <nameField>
        <displayFormat>ICR-{000000}</displayFormat>
        <label>Inventory Change Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Change Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>