CompInfoSystem/main/default/objects/Inventory_Change_Request__c/fields/BQR_Local__c.field-meta.xml
<CustomField>
    <fullName>BQR_Local__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BQR Local</label>
    <referenceTo>User</referenceTo>
    <relationshipName>InventoriesCR1</relationshipName>
    <type>Lookup</type>
</CustomField>