CompInfoSystem/main/default/objects/Inventory_Change_Request__c/fields/eSIG__c.field-meta.xml
<CustomField>
    <fullName>eSIG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>eSIG</label>
    <type>Checkbox</type>
</CustomField>