CompInfoSystem/main/default/objects/Inventory_Change_Request__c/fields/GxP_Criticality__c.field-meta.xml
<CustomField>
    <fullName>GxP_Criticality__c</fullName>
    <label>GxP Criticality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>