CompInfoSystem/main/default/objects/Inventory_Change_Request__c/fields/GxP_ID__c.field-meta.xml
<CustomField>
    <fullName>GxP_ID__c</fullName>
    <label>GxP ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>