CompInfoSystem/main/default/objects/Inventory_Change_Request__c/fields/Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory__c</fullName>
    <label>Controlling Inventory</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Inventory Change Requests</relationshipLabel>
    <relationshipName>Inventory_Change_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>