CompInfoSystem/main/default/objects/Inventory_Change_Request__c/fields/WebBrowser__c.field-meta.xml
<CustomField>
    <fullName>WebBrowser__c</fullName>
    <label>WebBrowser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>