CompInfoSystem/main/default/objects/Inventory_Change_Request__c/listViews/Drafts.listView-meta.xml
<ListView>
    <fullName>Drafts</fullName>
    <columns>NAME</columns>
    <columns>Inventory__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Comments__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>Drafts</label>
</ListView>