CompInfoSystem/main/default/objects/Inventory_Change_Request__c/listViews/Pending_Changes.listView-meta.xml
<ListView>
    <fullName>Pending_Changes</fullName>
    <columns>NAME</columns>
    <columns>Inventory__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Comments__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending Changes</label>
</ListView>